# 03_Claude

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/dll-maker/: SKILL.md
.claude/skills/dll-maker/assets/: CMakeLists.txt  template.cpp  template.h
.claude/skills/dll-maker/examples/: CMakeLists.txt  image_model.cpp  image_model.h  image_model.py  image_model_wrapper.py
.claude/skills/dll-maker/references/: advanced_patterns.md  ai_model_patterns.md  testing_validation.md
.claude/skills/dll-maker/scripts/: generate_wrapper.py
